src/objects/Indirect_Collaborators__c.object
<CustomObject>
    <fields>
        <fullName>CO_Feed__c</fullName>
        <label>CO Feed</label>
        <referenceTo>CO_Feed__c</referenceTo>
        <relationshipLabel>Indirect Collaborators</relationshipLabel>
        <relationshipName>Indirect_Collaborators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmployeeActive__c</fullName>
        <formula>CO_Feed__r.Employee__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmployeeActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>CO_Feed__r.Employee__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Indirect_Collaborators1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indirect_Collaborator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Collaborator Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Indirect_Collaborators2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q42017</fullName>
                </value>
                <value>
                    <fullName>Q12018</fullName>
                </value>
                <value>
                    <fullName>Q22018</fullName>
                </value>
                <value>
                    <fullName>Q32018</fullName>
                </value>
                <value>
                    <fullName>Q42018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rater_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rater Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Indirect_Collaborators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>Indirect Report/GM</fullName>
                </value>
                <value>
                    <fullName>Indirect Report/DL</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Dual Line</fullName>
                </value>
                <value>
                    <fullName>Inverse Collaborator</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Indirect Collaborators</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee_Name__c</columns>
        <columns>Rater_Name__c</columns>
        <columns>Team_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IDC-Id-{0000000}</displayFormat>
        <label>Indirect Collaborators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>